[package]
name = "webicon"
version = "0.2.1"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["web", "favicon", "scraper", "html"]
readme = "README.md"

description = "Favicon and apple-touch-icon scraper for Rust"
documentation = "https://rust-webicon.unterwaditzer.net/"
homepage = "https://rust-webicon.unterwaditzer.net/"
repository = "https://github.com/untitaker/rust-webicon"

[dependencies]
kuchiki = { version = "0.3", features = ["hyper"] }
hyper = "0.8"
url = "0.5"
quick-error = "0.2"
image = "0.6"
mime = "0.2"
string_cache = "0.2"
