[package]
name = "webicon"
version = "0.3.2"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["web", "favicon", "scraper", "html"]
readme = "README.md"

description = "Favicon and apple-touch-icon scraper for Rust"
documentation = "https://rust-webicon.unterwaditzer.net/"
homepage = "https://rust-webicon.unterwaditzer.net/"
repository = "https://github.com/untitaker/rust-webicon"

[dependencies]
kuchiki = { version = "0.3", features = ["hyper"] }
hyper = "0.9"
url = "1"
error-chain = "0.5"
image = "0.10"
mime = "0.2"
string_cache = "0.2"
