[package]
name = "webicon"
version = "0.3.3"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["web", "favicon", "scraper", "html"]
readme = "README.md"

description = "Favicon and apple-touch-icon scraper for Rust"
documentation = "https://rust-webicon.unterwaditzer.net/"
homepage = "https://rust-webicon.unterwaditzer.net/"
repository = "https://github.com/untitaker/rust-webicon"

[dependencies]
kuchiki = "0.4.1"
html5ever = "0.9.0"
reqwest = "0.4"
url = "1"
error-chain = "0.9"
image = "0.12"
mime = "0.2"
html5ever-atoms = "0.1"
